tests/baselines/reference/parserGenericsInTypeContexts2.errors.txt
==== tests/cases/compiler/parserGenericsInTypeContexts2.ts (9 errors) ====
    class C extends A<X<T>, Y<Z<T>>> implements B<X<T>, Y<Z<T>>> {
                    ~
!!! parserGenericsInTypeContexts2.ts(1,17): error TS2095: Cannot find name 'A'.
                                                ~
!!! parserGenericsInTypeContexts2.ts(1,45): error TS2095: Cannot find name 'B'.
    }
    
    var v1: C<X<T>, Y<Z<T>>>;
            ~~~~~~~~~~~~~~~~
!!! parserGenericsInTypeContexts2.ts(4,9): error TS2125: Type 'C' is not generic.
    var v2: D<X<T>, Y<Z<T>>> = null;
            ~
!!! parserGenericsInTypeContexts2.ts(5,9): error TS2095: Cannot find name 'D'.
    var v3: E.F<X<T>, Y<Z<T>>>;
            ~
!!! parserGenericsInTypeContexts2.ts(6,9): error TS2095: Cannot find name 'E'.
    var v4: G.H.I<X<T>, Y<Z<T>>>;
            ~
!!! parserGenericsInTypeContexts2.ts(7,9): error TS2095: Cannot find name 'G'.
    var v6: K<X<T>, Y<Z<T>>>[];
            ~
!!! parserGenericsInTypeContexts2.ts(8,9): error TS2095: Cannot find name 'K'.
    
    
    function f1(a: E<X<T>, Y<Z<T>>>) {
                   ~
!!! parserGenericsInTypeContexts2.ts(11,16): error TS2095: Cannot find name 'E'.
    }
    
    function f2(): F<X<T>, Y<Z<T>>> {
                   ~
!!! parserGenericsInTypeContexts2.ts(14,16): error TS2095: Cannot find name 'F'.
    }
    
    